2004-05-25  Bruno Haible  <bruno@clisp.org>

	* hashweak.tst: Add a test.

2004-06-03  Sam Steingold  <sds@gnu.org>

	* backquot.tst: CLISP now produces a much better result on one test

2004-06-03  Sam Steingold  <sds@gnu.org>

	* number2.tst: test all transcendental functions at #C(1 2)
	* lists152.tst (last): check the list argument for circularity,
	do not accept ATOMs

2004-05-23  Bruno Haible  <bruno@clisp.org>

	* backquot.tst: Add many tests.

2004-06-02  Sam Steingold  <sds@gnu.org>

	* conditions.tst: test restartable i/o errors

2004-06-01  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-test): bind *PRINT-CIRCLE* to T
	* iofkts.tst (*PRINT-CIRCLE*): updated

2004-06-01  Sam Steingold  <sds@gnu.org>

	* lists152.tst (butlast): check for circular lists

2004-05-23  Bruno Haible  <bruno@clisp.org>

	* backquot.tst: Add test for vector element type.

2004-05-20  Bruno Haible  <bruno@clisp.org>

	Increase memory sizes for builds with fixed memory size.
	* Makefile (LISP): Grant 30000 KW, since lists153 needs more than
	25000 KW.

2004-05-08  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Update a test.

2004-05-25  Sam Steingold  <sds@gnu.org>

	* number2.tst: ATANH blows up at -1 and 1

2004-05-08  Bruno Haible  <bruno@clisp.org>

	* tests.lisp (run-all-tests): Enable the hashweak test.

2004-05-22  Sam Steingold  <sds@gnu.org>

	* number2.tst: COS and COSH can return purely imaginary numbers

2004-05-08  Bruno Haible  <bruno@clisp.org>

	* weak.tst: New file.
	* tests.lisp (run-all-tests): Also run weak.tst.

2004-04-25  Bruno Haible  <bruno@clisp.org>

	* clos.tst: Test documentation string on a class without proper name.

2004-05-15  Bruno Haible  <bruno@clisp.org>

	* setf.tst: Add test for inlinability.

2004-05-05  Bruno Haible  <bruno@clisp.org>

	* type.tst: Change expected result of tests that depend on
	upgraded-complex-part-type.

2004-05-13  Sam Steingold  <sds@gnu.org>

	* number2.tst: added a LOG test that fails on Solaris/Sparc64
