@@ -1,3 +1,8 @@
+2004-06-09  Sam Steingold  <sds@gnu.org>
+
+	* tests.lisp (with-ignored-errors): return the error message on
+	error as the second argument in the new definition too
+
 2004-05-25  Bruno Haible  <bruno@clisp.org>
 
 	* hashweak.tst: Add a test.
